--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "framer-motion": "^11.13.1",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
@@ -104,6 +105,7 @@
     "esbuild": "^0.25.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
